apply plugin: 'java'

sourceSets {
    main {
        java {
            srcDir 'src'
        }
    }
    test {
        java {
            srcDir 'tests/src'
        }
        resources {
            srcDir 'tests/resources'
        }
    }
}

dependencies {
    compile 'log4j:log4j:1.2.17'
    compile 'org.jetbrains:annotations:20.1.0'
    compile 'com.google.guava:guava:30.1.1-jre'

    testCompile 'junit:junit:4.13.2'
}

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
    options.debugOptions.debugLevel = 'lines,vars,source'
}

compileTestJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
    options.debugOptions.debugLevel = 'lines,vars,source'
}

test {
    testLogging {
        exceptionFormat = 'full'
    }
}
